Center Alignment Fix

--- a/26-05-22/style.css
+++ b/26-05-22/style.css
@@ -25,7 +25,7 @@ figure {
     padding-bottom: 1rem;
     background-color: #1c0a1f;
     margin: auto;
-    margin-top: 10%;
+    margin-top: 11%;
     background-image: linear-gradient(
         to bottom right,
         #190e33,
